added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>simple webside</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+<h3>My fisrt webside</h3>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem illum temporibus rerum praesentium quam, alias aperiam, expedita repudiandae distinctio eveniet harum fugiat natus nihil sapiente. Dolor dolore iure recusandae neque?</p>
+
+
+
+    </div>
 </body>
 </html>
