added the second and third blog

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
     </div>
        <div>
-<h3>My fisrt webside</h3>
+<h3>My second webside</h3>
 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem illum temporibus rerum praesentium quam, alias aperiam, expedita repudiandae distinctio eveniet harum fugiat natus nihil sapiente. Dolor dolore iure recusandae neque?</p>
 
 
 
     </div>
        <div>
-<h3>My fisrt webside</h3>
+<h3>My third webside</h3>
 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem illum temporibus rerum praesentium quam, alias aperiam, expedita repudiandae distinctio eveniet harum fugiat natus nihil sapiente. Dolor dolore iure recusandae neque?</p>
 
 
