--- a/index.html
+++ b/index.html
@@ -14,19 +14,16 @@
 
 
     </div>
-       <div>
-<h3>My second webside</h3>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem illum temporibus rerum praesentium quam, alias aperiam, expedita repudiandae distinctio eveniet harum fugiat natus nihil sapiente. Dolor dolore iure recusandae neque?</p>
+    <div>
+        <h3>You to push incremental code</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"add a meanibgful commit mesage</li>
+        <li>git push</li>
+    </ul>
+</div>
 
 
-
-    </div>
-       <div>
-<h3>My third webside</h3>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem illum temporibus rerum praesentium quam, alias aperiam, expedita repudiandae distinctio eveniet harum fugiat natus nihil sapiente. Dolor dolore iure recusandae neque?</p>
-
-
-
-    </div>
+       
 </body>
 </html>
