--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
         <li>git push</li>
     </ul>
 </div>
+<div>
+    <h3>this is important things for our life</h3>
+<img src="nasimuddin.jpg">
+<img src="debec5e443771298de35e62907829793.jpg">
 
+</div>
 
        
 </body>
